[tool.poetry]
name = "tokentrim"
version = "0.1.6"
description = "Easily trim 'messages' arrays for use with GPTs."
authors = ["Killian Lucas <killian@drinkwater.ai>"]

[tool.poetry.dependencies]
python = "^3.6"
tiktoken = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"