[tool.poetry]
name = "tokentrim"
version = "0.1.13"
description = "Easily trim 'messages' arrays for use with GPTs."
authors = ["Killian Lucas <killian@openinterpreter.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
tiktoken = ">=0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"